feat(web): content hub
